--- a/src/toolbox/Toolbox.module.css
+++ b/src/toolbox/Toolbox.module.css
@@ -31,6 +31,12 @@
   border-bottom: none;
 }
 
+@media (max-width: 767px) {
+  .toolbox {
+    display: none;
+  }
+}
+
 .colors {
   padding: var(--space-2);
   border-top: 1px solid var(--color-border);
